hello-world/haproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-ingress-controller
spec:
  selector:
    matchLabels:
      app: haproxy-ingress-controller
  template:
    metadata:
      labels:
        app: haproxy-ingress-controller
    spec:
      containers:
      - name: haproxy
        image: haproxy:latest
        args:
        - "-W"
        - "-f"
        - "/etc/haproxy/haproxy.cfg"
        - "-p"
        - "/run/haproxy/haproxy.pid"
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /haproxy?stats
            port: 80
        volumeMounts:
        - name: haproxy-config-volume
          mountPath: /etc/haproxy
        - name: haproxy-pid-volume
          mountPath: /run/haproxy
        - name: hosts-file
          mountPath: /etc/hosts
      volumes:
      - name: haproxy-config-volume
        configMap:
          name: haproxy-ingress-cfg
      - name: haproxy-pid-volume
        emptyDir: {}
      - name: hosts-file
        configMap:
          name: custom-hosts
