hello-world/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: www 
spec:
  clusterIP: None
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
